<resources>
    <string name="app_name">Blood Donation</string>

    <!-- welcome screen -->
    <string name="start_journey">Start Journey</string>
    <string name="blood">Blood</string>
    <string name="donation">Donation</string>

    <!--splash screen-->
    <string name="donate_blood">Donate Blood</string>
    <string name="donate_blood_des">You do not need to be a doctor to save lives. Just donate blood. Its safe, its simple and every blood donor is a life saver.</string>
    <string name="next">Next</string>
    <string name="save_life">Save Life</string>
    <string name="save_life_des">Excuses never save a life, blood donation does. Get connected with blood donors and be a donor. "Donate Blood" app will help you to have that opportunity and save a life.</string>


    <!--login activity -->
    <string name="email_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="dontHaveAcc">Don\'t have an account? </string>
    <string name="signUp">Sign Up</string>

    <!--sign up 1 -->
    <string name="letUsKnowAboutYou">Let Us Know About You</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="provieYourIdentity">Provide your real name for your identity. Your name will be used for search.</string>

    <!--sign up 2 -->
    <string name="contact_information">Contact Information</string>
    <string name="phone_no">Phone No</string>
    <string name="alt_phone_no">Alternative Phone No</string>
    <string name="social">Social (Optional)</string>
    <string name="provide_correct_phone_no">Please provide correct phone no. This information will keep safe.</string>

    <!--sign up 3 -->
    <string name="what_is_blood_group">What Is Your Blood Group</string>
    <string name="your_blood_group_need_to_be">Your blood group need to be accurate. If you don\'t know about it please contact nearest clinic.</string>


    <!--sign up 4 -->
    <string name="how_much_you_weight">How Much Do You Weight</string>
    <string name="weight_advise">Note: you can not donate blood if you\'re under weight. Minimum weight for donation required 50 KG</string>

    <!--sign up 5 -->
    <string name="what_is_gender">What Is Your Gender</string>
    <string name="defining_your_gender">Defining your gender will late us know bring new features for mothers health care.</string>

    <!--sign up 6 -->
    <string name="where_do_you_live">Where Do You Live</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="provide_correct_adress">Please provide correct address. This information will keep safe.</string>


    <!--sign up 7 -->
    <string name="how_old_are_you">How Old Are You?</string>
    <string name="correct_birthdate_give_you">Correct birthdate give you best experience with the community. Don\'t hide it.</string>


    <!--sign up 8 -->
    <string name="you_are_almost_done">You\'re almost done</string>
    <string name="do_not_use_model">Please do not use a model or doll avatar. Please keep faith on yourself you\'re beautiful too.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>