<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".92"
        android:id="@+id/gl_hor_92"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".30"
        android:id="@+id/gl_hor_30"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".80"
        android:id="@+id/gl_ver_80"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".20"
        android:id="@+id/gl_ver_20"/>



    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rec_round_button_on_pressed"
        android:text="@string/start_journey"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        android:padding="@dimen/_12sdp"
        android:textStyle="bold"
        android:clickable="true"
        android:elevation="@dimen/_30sdp"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@id/gl_hor_92"
        app:layout_constraintStart_toEndOf="@id/gl_ver_20"
        app:layout_constraintEnd_toStartOf="@id/gl_ver_80"
        android:id="@+id/btn_start_journey"/>



    <ImageView
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:src="@drawable/blood_drop_icon"
        app:layout_constraintTop_toBottomOf="@id/gl_hor_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/icon"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/icon"
        app:layout_constraintStart_toStartOf="@id/icon"
        app:layout_constraintEnd_toEndOf="@id/icon"
        android:layout_marginTop="@dimen/_3sdp">

        <TextView
            android:id="@+id/blood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood"
            android:textSize="@dimen/_18sdp"
            android:textColor="@color/red"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donation"
            android:textSize="@dimen/_18sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_toRightOf="@id/blood"
            android:layout_marginStart="@dimen/_3sdp"/>

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>